[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saltmill"
version = "0.1.0"
description = "Efficient large CSV processing for PySpark and Databricks with automatic salt-based partitioning"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["pyspark", "databricks", "csv", "big-data", "partitioning", "salting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# pyspark is a peer dependency — users bring their own cluster version
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyspark>=3.3",
]

[project.urls]
Homepage = "https://github.com/yuvaraj-munirathinam/saltmill"
Repository = "https://github.com/yuvaraj-munirathinam/saltmill"
Issues = "https://github.com/yuvaraj-munirathinam/saltmill/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["saltmill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
