[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saltmill-spark"
version = "0.2.2"
description = "Efficient large-CSV processing for Apache Spark / Databricks with auto-salting, skew detection, and partition tuning"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["pyspark", "databricks", "csv", "big-data", "partitioning", "salting", "skew"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# pyspark is a peer dependency — users bring their own cluster version
dependencies = []

[project.optional-dependencies]
databricks = ["databricks-sdk>=0.12"]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pyspark>=3.4",
    "delta-spark>=2.4",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yuvaraj-munirathinam/saltmill"
Repository = "https://github.com/yuvaraj-munirathinam/saltmill"
Issues = "https://github.com/yuvaraj-munirathinam/saltmill/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["saltmill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true
